--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,13 +1,15 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: 'Abel', sans-serif;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
 }
 
 html{
     
     body{
         overflow: hidden;
+        
         
         .container{
             width: 100%;
@@ -47,6 +49,78 @@ html{
                 width: 100%;
                 display: flex;
                 height: calc(100vh - 50px);
+                position: relative;
+                overflow: hidden;
+
+                .error-overlay{
+                    position: absolute;
+                    top: -100%;
+                    left: 0;
+                    width: 100%;
+                    height: 100%;
+                    background-color: rgba(34, 34, 34, 0.5);
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    
+
+                    button{
+                        display: block;
+                        padding: 10px 20px;
+                        font-size: 16px;
+                        text-transform: uppercase;
+                        background-color: #1D1D1F;
+                        color: #6795DE;
+                        border: 1px solid #6795DE;
+                        border-radius: 5px;
+                        cursor: pointer;
+                        transition: .2s ease;
+                        position: absolute;
+                        bottom: 10px;
+                        left: 50%;
+                        transform: translate(-50%);
+                        
+                        &:hover{
+                            background-color: #151616;
+                        }
+                    }
+
+                    .error-box{
+                        width: 40%;
+                        height: 20%;
+                        background-color: #1D1D1F;
+                        color: #e2e2e2;
+                        text-transform: uppercase;
+                        font-size: 20px;
+                        text-align: center;
+                        padding-top: 30px;
+                        position: relative;
+                    }
+
+                    &.slide-down{
+                        animation-name: errorSlide;
+                        animation-duration: .5s;
+                        animation-fill-mode: forwards;
+
+                        @keyframes errorSlide {
+                            from {top: -100%;}
+                            to {top: 0;}
+                        }
+
+                    }
+
+                    &.slide-up{
+                        animation-name: errorSlideUp;
+                        animation-duration: .5s;
+                        animation-fill-mode: forwards;
+
+                        @keyframes errorSlideUp {
+                            from {top: 0;}
+                            to {top: -100%;}
+                        }
+
+                    }
+                }
                 
                 .left-container{
                     width: 70%;
@@ -56,6 +130,47 @@ html{
                     display: flex;
                     flex-wrap: wrap;
                     justify-content: center;
+                    position: relative;
+                        
+                    .tooltip{
+                        position: absolute;
+                        width: 200px;
+                        height: 100px;
+                        background: #222222;
+                        top: 0;
+                        left: 0;
+                        display: flex;
+                        flex-wrap: wrap;
+                        justify-content: center;
+                        align-items: center;
+                        color: #e2e2e2;
+                        font-size: 18px;
+                        text-align: center;
+                        z-index: 10;
+                        
+                        .tooltip-first{
+                            width: 50%;
+                            padding: 10px;
+                            box-sizing: border-box;
+                        }
+                        
+                        .tooltip-second{
+                            width: 50%;
+                            padding: 10px;
+                            box-sizing: border-box;
+                        }
+
+                        .tooltip-down{
+                            width: 100%;
+                            background-color: #151616;
+                            padding: 10px;
+                            font-size: 12px;
+                        }
+                        
+                        &.hidden{
+                            display: none;
+                        }
+                    }
 
 
                     
@@ -118,18 +233,29 @@ html{
                         height: 500px;
 
                         .scrollbar-container{
-                            width: 10px;
+                            width: 100px;
                             height: 540px;
                             position: relative;
                             background-color: #262729;
+                            display: flex;
+
+
+                            div{
+                                width: 45px;
+                                height: 100%;
+
+                                &:nth-child(3){
+                                    background-color: #303133;
+                                }
+                            }
     
                             .scrollbar{
-                                width: 100%;
+                                width: 10px;
                                 height: 20%;
                                 background-color: #1D1D1F;
-                                position: absolute;
+                                position: relative;
                                 top: 0;
-                                left: 0;
+                                cursor: pointer;
                             }
                         }
 
@@ -143,63 +269,23 @@ html{
                             background-color: #262729;
                             overflow: -moz-scrollbars-none;
                             -ms-overflow-style: none;
+                            text-align: justify;
+                           
     
                             &::-webkit-scrollbar {
                                  width: 0 !important;
-                            }
-    
-                            // .text-wrapper{
-                               
-                            // }
-    
-                            .tooltip{
-                                position: absolute;
-                                width: 200px;
-                                height: 100px;
-                                background: #262729;
-                                top: 0;
-                                left: 0;
-                                display: flex;
-                                flex-wrap: wrap;
-                                justify-content: center;
-                                align-items: center;
-                                color: #e2e2e2;
-                                font-size: 18px;
-                                text-align: center;
-                                z-index: 10;
-                                
-                                .tooltip-first{
-                                    width: 50%;
-                                    padding: 10px;
-                                    box-sizing: border-box;
-                                }
-                                
-                                .tooltip-second{
-                                    width: 50%;
-                                    padding: 10px;
-                                    box-sizing: border-box;
-                                }
-    
-                                .tooltip-down{
-                                    width: 100%;
-                                    background-color: #151616;
-                                    padding: 10px;
-                                    font-size: 12px;
-                                }
-                                
-                                &.hidden{
-                                    display: none;
-                                }
-                            }
-                            
+                            }     
     
                             p{
-                                font-size: 24px;
+                                font-size: 18px;
+                                line-height: 30px;
+                                
     
     
                                 span{
                                     cursor: pointer;
                                     transition: .2s ease;
+                                    // margin-right: 5px;
     
                                     &.highlighted{
                                         background-color: #3399ff;
