--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -156,8 +156,8 @@ html{
                         
                     .tooltip{
                         position: absolute;
-                        width: 200px;
-                        height: 100px;
+                        width: 230px;
+                        max-height: 100px;
                         background: #222222;
                         top: 0;
                         left: 0;
@@ -166,7 +166,7 @@ html{
                         justify-content: center;
                         align-items: center;
                         color: #e2e2e2;
-                        font-size: 18px;
+                        font-size: 16px;
                         text-align: center;
                         z-index: 10;
                         
